--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 feedparser
 pandas
 openpyxl
-nltk
-scikit-learn
 requests
 beautifulsoup4
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
